# cfiber

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.forgejo/workflows/: aarch64.yml  ci-image.yml  ci.yml  cortex-m0.yml  cortex-m3.yml  cortex-m4.yml  cortex-m7.yml  fuzz.yml  x86_64.yml
ci/: Containerfile
cmake/: arm_executable.cmake  toolchain-aarch64.cmake  toolchain-arm.cmake
fuzz/: CMakeLists.txt  README.md  fuzz_input.h  fuzz_multislab.c  fuzz_scheduler.c
include/cfiber/: context.h  fiber.h  scheduler.h
include/cfiber/core/: macros.h
include/cfiber/debug/: asan.h
include/cfiber/fiber/: context.h  fiber.h
include/cfiber/memory/: multislab_alloc.h  slab_alloc.h
include/cfiber/scheduler/: scheduler.h
include/cfiber/stack/: fixed_size_stack_allocator.h  growable_stack.h  growable_stack_allocator.h  stack.h
include/cfiber/stack/debug/: stack_sanitize.h
sample/: CMakeLists.txt  config.h  runtime_example.c
src/cfiber/debug/: asan.c
src/cfiber/fiber/: context_aarch64.S  context_armv6-m.S  context_armv7-m.S  context_x86_64.S  fiber.c  fiber_prologue_aarch64_fiber.S  fiber_prologue_arm_cortex_fiber.S  fiber_prologue_x86_64_fiber.S
src/cfiber/memory/: multislab_alloc.c  slab_alloc.c
src/cfiber/scheduler/: scheduler.c
src/cfiber/stack/: fixed_size_stack_allocator.c  growable_stack.c  growable_stack_allocator.c
src/cfiber/stack/debug/: canary.c  watermark.c
tests/: CMakeLists.txt
tests/defensive/: test_defensive.c
tests/fiber/: context_switch_unit_tests.c  context_switch_unit_tests.h  unit_tests_aarch64.c  unit_tests_arm.c  unit_tests_x86_64.c
tests/memory/: test_multislab_alloc.c
tests/scheduler/: test_scheduler.c
tests/stack/: test_fixed_size_stack_allocator.c  test_growable_stack.c  test_stack_sanitizer.c
tests/test/: test.c  test.h
utils/: make.sh
utils/cortex/: startup_qemu_armv6-m.S  startup_qemu_armv7-m.S  syscalls.c
utils/cortex/m0/: microbit.ld
utils/cortex/m3/: mps2-an385.ld
utils/cortex/m7/: mps2-an500.ld
